--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>My Design</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="UTF-8">
-	<!--[if IE]>
+    <title>My Compass</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <!--[if IE]>
 	    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-    <link href="css/screen.css" type="text/css" rel="stylesheet" >
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,300,600,400' rel='stylesheet' type='text/css'>
+
+    <link href="css/screen.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-
-	<h1>hello, world</h1>
-	<h1>嗨！世界我來了！</h1>
-
-	<section>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, mollitia. Praesentium earum sequi sit eius impedit, id consequatur voluptate labore numquam? Placeat vero inventore cupiditate natus, temporibus, voluptates qui necessitatibus?</p>
+	
+	<section class="hero">
+		<header>
+			<img src="images/logo.png" alt="logo">
+			<ul>
+				<li>Agents</li>
+				<li>Login</li>
+				<li>signup</li>
+			</ul>
+		</header>
+		<h1>Relax, Finding An Agent Just Got Easier</h1>
+		<h2>Receive proposals from best agents for free</h2>
+		<form action="">
+			<input type="text" placeholder="Enter a suburb">
+			<input type="button" value="search">
+		</form>
 	</section>
 
+
 </body>
+
 </html>
