完成中間 numbers 設計

--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
 		</form>
 	</section>
 
+	<section class="numbers">
+		<ul>
+			<li class="number">
+				<h2>20,000</h2>
+				<h3>Agents</h3>
+			</li>
+			<li class="number">
+				<h2>1,723,000</h2>
+				<h3>Transactions</h3>
+			</li>
+			<li class="number">
+				<h2>17,444</h2>
+				<h3>Agencies</h3>
+			</li>
+			<li class="number">
+				<h2>10,200</h2>
+				<h3>Suburbs</h3>
+			</li>
+		</ul>
+	</section>
+
 
 </body>
 
