完成 How It Works

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,300,600,400' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
     <link href="css/screen.css" type="text/css" rel="stylesheet">
 </head>
@@ -53,6 +54,36 @@
 		</ul>
 	</section>
 
+	<!-- <i class="fa fa-camera-retro fa-5x"></i> fa-5x -->
+	<section class="how-it-works">
+		<h2>How it works</h2>
+		<ul>
+			<li>
+				<div class="detail">
+					<span class="number">1</span>
+					<i class="fa fa-list"></i>
+					<h3>Compare</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic animi tempore quibusdam at sit repellat impedit libero, ipsam, molestiae veniam odit corporis aliquid et fuga ab rerum? Soluta, eligendi, nobis. </p>
+				</div>
+			</li>
+			<li>
+				<div class="detail">
+					<span class="number">2</span>
+					<i class="fa fa-pencil"></i>
+					<h3>Receive Proposals</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum ut ipsam repellendus sit libero eos veritatis, porro perspiciatis velit! Quis quasi modi tempore, distinctio, deleniti laboriosam officia voluptates animi.</p>
+				</div>
+			</li>
+			<li>
+				<div class="detail">
+					<span class="number">3</span>
+					<i class="fa fa-users"></i>
+					<h3>Sell with the Best</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi fugit est dignissimos animi explicabo, repellendus. Aut fugiat in consequatur explicabo hic dolore, mollitia esse quaerat reprehenderit dolores? Reiciendis quam, nemo?</p>
+				</div>
+			</li>
+		</ul>
+	</section>
 
 </body>
 
