--- a/week2.html
+++ b/week2.html
@@ -12,7 +12,7 @@
  -->		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,300,600,400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 
-    <link href="/css/week2.css" type="text/css" rel="stylesheet">
+    <link href="css/week2.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
