--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 <!-- 		<link rel="stylesheet" media="screen and (max-width: 480px)" href="numbers-small.css">
- -->		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,300,600,400' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+ -->
+ 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,300,600,400">
+		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
-    <link href="/css/screen.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="css/screen.css">
 </head>
 
 <body>
